<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ESPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="slogan">精品音乐，时时相伴</string>
    
    <string name="only_wifi">仅wifi联网</string>
    
    <string name="exit">退出</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="exit_app">退出应用</string>
    <string name="exit_app_note_timer">您确定要退出应用吗？(%1$d)</string>
    <string name="exit_app_note">您确定要退出应用吗？</string>
    
    <string name="settings">设置</string>
    
    <string name="music_history_num">累计播放歌曲%1$d首</string>
    <string name="music_download_num">有%1$d首歌曲正在下载</string>
    
    <string name="local_music">本地音乐</string>
    <string name="music_download">歌曲下载</string>
    <string name="no_download_task">没有下载任务</string>
    <string name="my_favorite">我的最爱</string>
    <string name="recently_play">最近播放</string>
    
    <string name="num_of_music">%1$d首</string>
    
    <string name="my_playlist">我的播放列表</string>
    
    <string name="num_of_playlist">%1$d个</string>
    
    <string name="manage">管理</string>
    
    <string name="_new">新建</string>
    
    <string name="delete_local_music_together">同时删除本地文件</string>
    
    <string name="new_playlist">新建播放列表</string>
    <string name="hint_input_playlist_name">在此输入播放列表名称</string>
    
    <string name="change_cover">更换封面</string>
    <string name="add_music">添加歌曲</string>
    
    <string name="take_a_picture">拍照</string>
    <string name="photo_album">相册</string>
    <string name="play_all_music">播放所有</string>
    <string name="delete">删除</string>
    <string name="favorite">收藏</string>
    

</resources>
