<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_take_picture"
        style="@style/popwindow_white"
        android:text="@string/take_a_picture" />
	
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/common_bg_grey"/>
    
    <Button
        android:id="@+id/btn_photo_album"
        style="@style/popwindow_white"
        android:text="@string/photo_album" />

     <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/common_bg_grey"/>
    
    <Button
        android:id="@+id/btn_cancel"
        style="@style/popwindow_white"
        android:text="@string/cancel" />

</LinearLayout>