<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_grey" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/panel_mine_top"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="#44444444" >

            <RelativeLayout
                android:id="@+id/panel_show_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp" >

                <ImageView
                    android:id="@+id/iv_mine_logo"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/tv_mine_slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/iv_mine_logo"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@id/iv_mine_logo"
                    android:text="@string/slogan"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_mine_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/iv_mine_logo"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/iv_mine_logo"
                    android:text="@string/music_history_num"
                    android:textColor="@android:color/white"
                    android:textSize="15dp" />
            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/common_ll_divider"
            android:orientation="horizontal"
            android:padding="8dp"
            android:showDividers="middle" >

            <RelativeLayout
                android:id="@+id/btn_local_music"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/mine_btn_green64BB3E" >

                <ImageView
                    android:id="@+id/iv_local_music_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_local_music" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/iv_local_music_icon"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="-4dp"
                    android:layout_toRightOf="@id/iv_local_music_icon"
                    android:text="@string/local_music"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_local_music_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/iv_local_music_icon"
                    android:layout_marginBottom="-4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/iv_local_music_icon"
                    android:text="@string/num_of_music"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_download"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/mine_btn_green64BB3E" >

                <ImageView
                    android:id="@+id/iv_download_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_download" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/iv_download_icon"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="-4dp"
                    android:layout_toRightOf="@id/iv_download_icon"
                    android:text="@string/music_download"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_download_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/iv_download_icon"
                    android:layout_marginBottom="-4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/iv_download_icon"
                    android:singleLine="true"
                    android:text="@string/no_download_task"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/common_ll_divider"
            android:orientation="horizontal"
            android:padding="8dp"
            android:showDividers="middle" >

            <RelativeLayout
                android:id="@+id/btn_favorite"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/mine_btn_green64BB3E" >

                <ImageView
                    android:id="@+id/iv_favorite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_favorite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/iv_favorite_icon"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="-4dp"
                    android:layout_toRightOf="@id/iv_favorite_icon"
                    android:text="@string/my_favorite"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_favorite_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/iv_favorite_icon"
                    android:layout_marginBottom="-4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/iv_favorite_icon"
                    android:text="@string/num_of_music"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_recently_play"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/mine_btn_green64BB3E" >

                <ImageView
                    android:id="@+id/iv_recently_play_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/iv_recently_play_icon"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="-4dp"
                    android:layout_toRightOf="@id/iv_recently_play_icon"
                    android:text="@string/recently_play"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_recently_play_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/iv_recently_play_icon"
                    android:layout_marginBottom="-4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/iv_recently_play_icon"
                    android:text="@string/num_of_music"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/tv_playlist_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="12dp"
                android:text="@string/my_playlist"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_num_of_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/tv_playlist_label"
                android:text="@string/num_of_playlist"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_playlist_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:drawableLeft="@drawable/ic_edit"
                android:gravity="center"
                android:text="@string/manage"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_playlist_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@id/tv_playlist_manager"
                android:drawableLeft="@drawable/playlist_add"
                android:gravity="center"
                android:text="@string/_new"
                android:textSize="15dp" />
        </RelativeLayout>

        <com.langchao.leo.esplayer.ui.widget.NestedListView
            android:id="@+id/lv_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"
            android:paddingTop="8dp" />
    </LinearLayout>

</ScrollView>